@@ -1,7 +1,1 @@
-// stdafx.cpp : source file that includes just the standard includes
-// mt32emu_win32drv_GUI.pch will be the pre-compiled header
-// stdafx.obj will contain the pre-compiled type information
-
 #include "stdafx.h"
-
-
