@@ -3,6 +3,8 @@
 // are changed infrequently
 #pragma once
 
-// TODO: reference additional headers your program requires here
+// Require Windows 2K API
+#define _WIN32_WINNT 0x0500
+
 #include <windows.h>
 #include <iostream>
